<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodFragment"
    android:background="@color/all"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_squared_white"
                android:fontFamily="@font/primetime"
                android:padding="8dp"
                android:text="Food tip for yoga practitioners"
                android:textAllCaps="true"
                android:textColor="@color/orange"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/border_bottom"
                android:padding="2dp"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:fontFamily="@font/robotomedium"
                android:text="What should yoga practitioners eat before practicing?"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcFood1"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/textView11"
                android:layout_marginTop="10px"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="What should yoga practitioners eat after practicing?"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/robotomedium"
                android:background="@drawable/border_bottom"
                android:padding="2dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                app:layout_constraintEnd_toEndOf="@+id/textView10"
                app:layout_constraintStart_toStartOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/rcFood1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcFood2"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Diet for yoga practitioners to lose weight in 1 day"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:padding="2dp"
                android:layout_marginTop="10px"
                android:layout_gravity="center"
                android:paddingStart="5dp"
                android:fontFamily="@font/robotomedium"
                android:background="@drawable/border_bottom"
                android:paddingEnd="5dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/textView11"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/rcFood2" />


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="2100px"
                android:layout_marginTop="20px"
                android:background="@drawable/food_bg">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/blur_orange"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:paddingStart="7dp"
                    android:text="1. Breakfast"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="7dp"
                    android:paddingEnd="5dp"
                    android:text="@string/diet1"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="7dp"
                    android:paddingEnd="5dp"
                    android:text="@string/diet2"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView18"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="7dp"
                    android:text="2. Lunch"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="7dp"
                    android:paddingEnd="5dp"
                    android:text="@string/diet3"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="7dp"
                    android:paddingEnd="5dp"
                    android:text="@string/diet4"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="7dp"
                    android:text="3. Dinner"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="7dp"
                    android:paddingEnd="5dp"
                    android:text="@string/diet5"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:paddingStart="7dp"
                    android:paddingEnd="5dp"
                    android:text="@string/diet6"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>